[gd_scene load_steps=3 format=2]

[ext_resource path="res://Blocks/SingleBlocks/OrangeBlock.tscn" type="PackedScene" id=1]
[ext_resource path="res://Blocks/DragAndDrop.gd" type="Script" id=2]

[node name="JBlock" type="Area2D" groups=[
"Block",
]]
script = ExtResource( 2 )
origColour = Color( 1, 1, 1, 1 )
blockName = "JBlock"

[node name="Sprite" parent="." instance=ExtResource( 1 )]
position = Vector2( 32, 32 )

[node name="Sprite2" parent="." instance=ExtResource( 1 )]
position = Vector2( 32, -32 )

[node name="Sprite3" parent="." instance=ExtResource( 1 )]
position = Vector2( -32, 32 )

[node name="Sprite4" parent="." instance=ExtResource( 1 )]
position = Vector2( -96, 32 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 64, 64 )
polygon = PoolVector2Array( -5.83331, -5.33334, -187.333, -5.66666, -187.333, -59.6667, -58.6667, -58, -59.1667, -123.667, -5.5, -123.667 )

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Area2D_area_exited"]
[connection signal="input_event" from="." to="." method="_on_Area2D_input_event"]
